--- a/style.css
+++ b/style.css
@@ -1,173 +1,215 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+:root {
+  --brown1: #590202;
+  --gray1: #2a2a2a;
+  --html: #e44d26;
+  --css: #1572b6;
+  --js: #f0db4f;
+  --git: #f34f29;
+  --sass: #cb6699;
+  --node: #83cd29;
+  --mongo: #4faa41;
+  --post: #336791;
+  --react: #61dafb;
 }
-html{
-    font-size: 16px;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
 }
-main{
+html {
+  font-size: 16px;
 }
-.header{
-    width: 100%;
-    height: 50px;
-    color: white;
-    background-color: #590202;
+main {
 }
-.header__container{
-    margin: auto;
-    width: 100%;
-    max-width: 1020px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+.header {
+  width: 100%;
+  height: 50px;
+  color: white;
+  background-color: var(--brown1);
 }
-.header__logo{
-    width: 102px;
-    height:37.76px;
-    margin-left:20px ;
+.header__container {
+  margin: auto;
+  width: 100%;
+  max-width: 1020px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
-.header__logo img{
-    width: 100%;
-    height: 100%;
+.header__logo {
+  width: 102px;
+  height: 37.76px;
+  margin-left: 20px;
+}
+.header__logo img {
+  width: 100%;
+  height: 100%;
 }
 
-.header__nav--ul{
-    text-decoration: none;
-    display: flex;
-    list-style-type: none;
+.header__nav--ul {
+  text-decoration: none;
+  display: flex;
+  list-style-type: none;
 }
 .header__nav--a {
-    color: white;
-    text-decoration: none;
-    margin: 0 30px ;
+  color: white;
+  text-decoration: none;
+  margin: 0 30px;
 }
 .header__nav--li {
 }
-.hero{
-    background-color: #2A2A2A;
-    color: white;
-    height: 360px;
+.hero {
+  background-color: var(--gray1);
+  color: white;
+  height: 360px;
 }
-.hero__container{
-    width: 100%;
-    height: 100%;
-    max-width: 1020px;
-    margin: auto;
-    display: flex;
-    align-items: flex-end;
+.hero__container {
+  width: 100%;
+  height: 100%;
+  max-width: 1020px;
+  margin: auto;
+  display: flex;
+  align-items: flex-end;
 }
-.hero__mainText p{
-    font-size: 2.3rem;
-    margin-top:137px ;
+.hero__mainText p {
+  font-size: 2.3rem;
+  margin-top: 137px;
 }
-.hero__mainText{
-    width: 64.5%;
-    height: 100%;
+.hero__mainText {
+  width: 64.5%;
+  height: 100%;
 }
 .hero__photo {
-    width: 35.5%;
-    height: 100%;
-    background-image: url(./assets/profile.png);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+  width: 35.5%;
+  height: 100%;
+  background-image: url(./assets/profile.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
-.hero__photo img{
-    width: 85%;
+.hero__photo img {
+  width: 85%;
 }
-.skills{
-    width: 100%;
-    max-width: 1020px;
-    margin: 30px auto;
+.skills {
+  width: 100%;
+  max-width: 1020px;
+  margin: 30px auto;
 }
-.skills h2{
-    font-size: 2.5rem
+.skills h2 {
+  font-size: 2.5rem;
 }
-.skills__container{
-display: grid;
-grid-template: repeat(2,1fr)/repeat(5,1fr);
-gap: 10px;
-height: 330px;
-width: 855px;
-margin: 20px auto;
+.skills__container {
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(5, 1fr);
+  gap: 10px;
+  height: 336px;
+  width: 855px;
+  margin: 20px auto;
 }
-.skills__items{
- 
-
+.skills__items {
+  text-align: center;
+  box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.75);
 }
-.html{
-background-color:#E44D26 ;
+.info__items {
+  margin-top: 20px;
+}
+.tech_icon {
+  font-size: 4rem;
+  color: white;
+}
+.html {
+  background-color: var(--html);
 }
 .css {
-    
-    background-color:#1572B6;
+  background-color: var(--css);
 }
-.js{
-    background-color:#F0DB4F;
-    
+.js {
+  background-color: var(--js);
 }
-.git{
-    background-color:#F34F29 ;
-    
+.git {
+  background-color: var(--git);
 }
-.sass{
-    
-    background-color:#CB6699;
+.sass {
+  background-color: var(--sass);
 }
-.node{
-    
-    background-color:#83CD29;
+.node {
+  background-color: var(--node);
 }
-.mongo{
-    background-color:#4FAA41;
-    
+.mongo {
+  background-color: var(--mongo);
 }
-.post{
-    background-color:#336791 ;
-    
+.post {
+  background-color: var(--post);
 }
-.react{
-    background-color:#61DAFB;
-
+.react {
+  background-color: var(--react);
 }
-.ui{
-    background-color: #2A2A2A;
+.ui {
+  background-color: var(--gray1);
 }
-.projects{
-    width: 1020px;
-    margin: 0 auto;
+.projects {
+  width: 1020px;
+  margin: 0 auto;
 }
-.projects h2{
-    font-size: 2.5rem
+.projects h2 {
+  font-size: 2.5rem;
 }
-.project{
-    width: 100%;
-    height: 288px;
-    display: grid;
-    grid-template-columns: 513px 1fr;
-    margin-top: 30px;
+.project {
+  width: 100%;
+  height: 288px;
+  display: grid;
+  grid-template-columns: 513px 1fr;
+  margin-top: 30px;
 }
-.project__imgContainer{
-    width: 513px;
-    height: 288px;
-    background-color: #2A2A2A;
+.project__imgContainer {
+  width: 513px;
+  height: 288px;
+  background-color: #2a2a2a;
+  box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.75);
 }
-.project__info{
-    width: 100%;
-    margin: 10px;
+.project__img {
+  width: 473px;
+  height: 248px;
+  background-color: var(--brown1);
+  margin: 20px;
+  outline: 10px solid var(--brown1);
 }
-.project__info h3{
-    font-size: 2.5rem;
+.project__info {
+  width: 100%;
+  margin: 10px;
 }
-.techs{
-    height: 30px;
-    width: 100%;
-    background-color: whitesmoke;
+.project__info h3 {
+  font-size: 2.5rem;
 }
-.project__info p{
-    font-weight: 300;
-    font-size: 1.5rem;
+.techs {
+  display: flex;
+  justify-content: flex-start;
+  height: 30px;
+  width: 100%;
+  background-color: whitesmoke;
+  margin: 20px 0;
+}
+.tech {
+  height: 25px;
+  background-color: antiquewhite;
+  width: 25px;
+  margin: 2.5px 10px;
+}
+.project__info p {
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+.project__info--buttons {
+  margin-top: 30px;
+}
+.info__button {
+  width: 130px;
+  height: 40px;
+  color: white;
+  background-color: #590202;
+  border: none;
+  margin: 10px 5px;
+  border-radius: 2px;
+  box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.75);
 }
